--- a/app/src/main/res/layout/activity_nfcreader.xml
+++ b/app/src/main/res/layout/activity_nfcreader.xml
@@ -7,12 +7,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/bg_gradient"
     tools:context="com.darkarmy.ykl.samaritan.NFCReader">
 
     <TextView
         android:id="@+id/nfcdata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/explanation" />
+        android:text="@string/explanation"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
