--- a/app/src/main/res/layout/activity_nfcreader.xml
+++ b/app/src/main/res/layout/activity_nfcreader.xml
@@ -14,8 +14,9 @@
         android:id="@+id/nfcdata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/explanation"
+        android:text="Try NFC"
         android:layout_centerHorizontal="true"
+        android:textColor="@android:color/white"
         android:layout_centerVertical="true"/>
 
 </RelativeLayout>
