--- a/app/src/main/res/layout/activity_aadhar.xml
+++ b/app/src/main/res/layout/activity_aadhar.xml
@@ -35,13 +35,8 @@
         android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:layout_marginEnd="@dimen/activity_vertical_margin"
         android:layout_marginRight="@dimen/activity_vertical_margin"
-        android:src="@drawable/ic_add"
+        android:src="@android:drawable/ic_input_add"
         app:layout_anchor="@id/bottom_sheet_view"
         app:layout_anchorGravity="bottom|right|end" />
 
-</android.support.design.widget.CoordinatorLayout><?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
