--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/bg_gradient"
+    android:background="@android:color/background_light"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
+        android:textSize="16sp"
         android:paddingBottom="2dip" />
 
     <TextView
@@ -25,15 +26,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
-        android:layout_toRightOf="@+id/year"
-        android:textStyle="bold" />
+        android:textSize="16sp"
+        android:layout_alignParentRight="true"
+        android:textStyle="bold"
+        android:paddingBottom="2dip" />
 
     <TextView
         android:id="@+id/plot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/year"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingBottom="2dip"/>
 
     <TextView
         android:id="@+id/director"
@@ -48,29 +52,33 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/plot"
         android:layout_toRightOf="@+id/director"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingBottom="2dip"/>
 
     <TextView
         android:id="@+id/released"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/plot"
-        android:layout_toRightOf="@id/runtime"
-        android:textStyle="bold" />
+        android:layout_alignParentRight="true"
+        android:textStyle="bold"
+        android:paddingBottom="2dip"/>
 
     <TextView
         android:id="@+id/imdbrating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/director"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingBottom="2dip"/>
 
     <TextView
         android:id="@+id/metascore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imdbrating"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/director"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingBottom="2dip"/>
 
 </RelativeLayout>
