--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,8 +8,9 @@
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="2dip"
-        android:paddingTop="6dip"
+        android:paddingLeft="2dp"
+        android:paddingBottom="2dp"
+        android:paddingTop="6dp"
         android:textSize="16sp"
         android:textStyle="bold" />
 
@@ -18,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
+        android:paddingLeft="2dp"
         android:textSize="16sp"
         android:paddingBottom="2dip" />
 
@@ -27,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:textSize="16sp"
+        android:paddingLeft="2dp"
         android:layout_alignParentRight="true"
         android:textStyle="bold"
         android:paddingBottom="2dip" />
@@ -36,6 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/year"
+        android:paddingLeft="2dp"
         android:textStyle="bold"
         android:paddingBottom="2dip"/>
 
@@ -43,6 +47,7 @@
         android:id="@+id/director"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="2dp"
         android:layout_below="@id/plot"
         android:textStyle="bold" />
 
@@ -50,6 +55,7 @@
         android:id="@+id/runtime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="2dp"
         android:layout_below="@id/plot"
         android:layout_toRightOf="@+id/director"
         android:textStyle="bold"
@@ -60,6 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/plot"
+        android:paddingLeft="2dp"
         android:layout_alignParentRight="true"
         android:textStyle="bold"
         android:paddingBottom="2dip"/>
@@ -69,6 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/director"
+        android:paddingLeft="2dp"
         android:textStyle="bold"
         android:paddingBottom="2dip"/>
 
@@ -78,6 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/director"
+        android:paddingLeft="2dp"
         android:textStyle="bold"
         android:paddingBottom="2dip"/>
 
